--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,9 @@
     "paths": {
       "@app/*": [
         "./src/app/*"
+      ],
+      "@dt/*": [
+        "./src/app/definitions/*"
       ]
     }
   }
